@@ -1,3 +1,7 @@
+2013-02-28  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Non-parenthesized variable names can not contain a dollar sign
+
 2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Printing of warnings to stderr can be disabled
